idempotent Allocator::CreateSession request (#601)
* idempotent Allocator::CreateSession request


Co-authored-by: imakunin <imakunin@yandex-team.ru>